kubernetes/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-faas
  labels:
    app: nodejs-faas
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nodejs-faas
  template:
    metadata:
      labels:
        app: nodejs-faas
    spec:
      containers:
      - name: nodejs-faas
        image: shreyasnayak21/nodejs-faas:beta
        ports:
        - containerPort: 9256
        volumeMounts:
        - name: functions-volume
          mountPath: /opt/app/storage
      volumes:
      - name: functions-volume
        persistentVolumeClaim:
          claimName: functions-pvc
